openshift/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tower-defense-backend
  labels:
    app: tower-defense-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tower-defense-backend
  template:
    metadata:
      labels:
        app: tower-defense-backend
    spec:
      containers:
        - name: tower-defense-backend
          image: image-registry.openshift-image-registry.svc:5000/anaeem/tower-defense-backend@sha256:9abb55ca0d002962583e9442005df6cb0d6a38152645743f7263253c09457177 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort:  3001 
          readinessProbe:
            httpGet:
              path: /board
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /board
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: tower-defense-backend
  labels:
    app: tower-defense-backend
spec:
  selector:
    app: tower-defense-backend
  ports:
    - name: http
      port: 80
      targetPort: 3001
