openshift/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tower-defense-frontend
  labels:
    app: tower-defense-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tower-defense-frontend
  template:
    metadata:
      labels:
        app: tower-defense-frontend
    spec:
      containers:
        - name: tower-defense-frontend
          image: image-registry.openshift-image-registry.svc:5000/anaeem/tower-defense-frontend@sha256:7ac70ec87a1e6fe33be26349262061e0c41c068f737fee23060b1a0243fb42c1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: tower-defense-frontend
  labels:
    app: tower-defense-frontend
spec:
  selector:
    app: tower-defense-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
